tests/ui/neg_multiply.stderr
error: Negation by multiplying with -1
  --> $DIR/neg_multiply.rs:30:5
   |
30 |     x * -1;
   |     ^^^^^^
   |
note: lint level defined here
  --> $DIR/neg_multiply.rs:4:9
   |
4  | #![deny(neg_multiply)]
   |         ^^^^^^^^^^^^

error: Negation by multiplying with -1
  --> $DIR/neg_multiply.rs:32:5
   |
32 |     -1 * x;
   |     ^^^^^^

error: aborting due to 2 previous errors

